@@ -6,11 +6,11 @@ class tx_icslibnavitia_Network extends tx_icslibnavitia_Node {
 		'id' => 'int',
 		'name' => 'string',
 		'externalCode' => 'string',
+		'impactPosList' => 'array',
 	);
 
 	public function __construct() {
 		parent::__construct(get_class($this) . '::$fields');
-		// impactposlist
 	}
 	
 	public function ReadXML(XMLReader $reader) {
@@ -36,6 +36,22 @@ class tx_icslibnavitia_Network extends tx_icslibnavitia_Node {
 
 	protected function ReadElement(XMLReader $reader) {
 		switch ($reader->name) {
+			case 'ImpactPosList':
+				$impacts = array();
+				if (!$reader->isEmptyElement) {
+					$reader->read();
+					while ($reader->nodeType != XMLReader::END_ELEMENT) {
+						if ($reader->nodeType == XMLReader::ELEMENT) {
+							if ($reader->name == 'ImpactPos') {
+								$impacts[] = (int)$reader->readString();
+							}
+							tx_icslibnavitia_Node::SkipChildren($reader);
+						}
+						$reader->read();
+					}
+				}
+				$this->__set('impactPosList', $impacts);
+				break;
 			default:
 				tx_icslibnavitia_Node::SkipChildren($reader);
 		}
