@@ -10,14 +10,14 @@ class tx_icslibnavitia_Route extends tx_icslibnavitia_Node {
 		'lineIdx' => 'int',
 		'frequence' => 'bool',
 		'adapted' => 'bool',
-		// 'comment' => 'object:tx_icslibnavitia_?',
+		'comment' => 'object:tx_icslibnavitia_Comment?',
 		'line' => 'object:tx_icslibnavitia_Line?',
+		'impactPosList' => 'array',
 	);
 
 	public function __construct() {
 		parent::__construct(get_class($this) . '::$fields');
 		$this->values['routePointList'] = t3lib_div::makeInstance('tx_icslibnavitia_NodeList', 'tx_icslibnavitia_RoutePoint');
-		// impactposlist
 	}
 	
 	public function ReadXML(XMLReader $reader) {
@@ -63,10 +63,31 @@ class tx_icslibnavitia_Route extends tx_icslibnavitia_Node {
 			case 'RoutePointList':
 				tx_icslibnavitia_Node::ReadList($reader, $this->values['routePointList'], array('RoutePoint' => 'tx_icslibnavitia_RoutePoint'));
 				break;
+			case 'Comment':
+				$obj = t3lib_div::makeInstance('tx_icslibnavitia_Comment');
+				$obj->ReadXML($reader);
+				$this->__set('comment', $obj);
+				break;
 			case 'Line':
 				$obj = t3lib_div::makeInstance('tx_icslibnavitia_Line');
 				$obj->ReadXML($reader);
 				$this->__set('line', $obj);
+				break;
+			case 'ImpactPosList':
+				$impacts = array();
+				if (!$reader->isEmptyElement) {
+					$reader->read();
+					while ($reader->nodeType != XMLReader::END_ELEMENT) {
+						if ($reader->nodeType == XMLReader::ELEMENT) {
+							if ($reader->name == 'ImpactPos') {
+								$impacts[] = (int)$reader->readString();
+							}
+							tx_icslibnavitia_Node::SkipChildren($reader);
+						}
+						$reader->read();
+					}
+				}
+				$this->__set('impactPosList', $impacts);
 				break;
 			default:
 				tx_icslibnavitia_Node::SkipChildren($reader);
