@@ -13,12 +13,13 @@ class tx_icslibnavitia_StopArea extends tx_icslibnavitia_Node {
 		'data' => 'string',
 		'city' => 'object:tx_icslibnavitia_City?',
 		'coord' => 'object:tx_icslibnavitia_Coord?',
+		'impactPosList' => 'array',
 	);
 
 	public function __construct() {
 		parent::__construct(get_class($this) . '::$fields');
 		$this->values['hangList'] = t3lib_div::makeInstance('tx_icslibnavitia_HangList');
-		// impactposlist, modetypelist
+		// modetypelist
 	}
 	
 	public function ReadXML(XMLReader $reader) {
@@ -80,6 +81,22 @@ class tx_icslibnavitia_StopArea extends tx_icslibnavitia_Node {
 				break;
 			case 'HangList':
 				$this->values['hangList']->ReadXML($reader);
+				break;
+			case 'ImpactPosList':
+				$impacts = array();
+				if (!$reader->isEmptyElement) {
+					$reader->read();
+					while ($reader->nodeType != XMLReader::END_ELEMENT) {
+						if ($reader->nodeType == XMLReader::ELEMENT) {
+							if ($reader->name == 'ImpactPos') {
+								$impacts[] = (int)$reader->readString();
+							}
+							tx_icslibnavitia_Node::SkipChildren($reader);
+						}
+						$reader->read();
+					}
+				}
+				$this->__set('impactPosList', $impacts);
 				break;
 			default:
 				tx_icslibnavitia_Node::SkipChildren($reader);
