@@ -1,3 +1,7 @@
+2013-03-26 Pierrick Caillon <pierrick.caillon@plan-net.fr>
+	* Fix: Impact and Event element name.
+	* Fix: Missing Comment node parsing.
+
 2013-03-25 Pierrick Caillon <pierrick.caillon@plan-net.fr>
 	* Added TYPO3 version dependency.
 	* Added Impact and Event node.
